--- a/Simple-Notes/src/main/res/values/strings.xml
+++ b/Simple-Notes/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Simple-Notes</string>
+    <!-- Checklists -->
+    <string name="checklist">Checklist</string>
+    <string name="add_new_checklist_item">Add a new checklist item</string>
+    <string name="add_new_checklist_items">Add new checklist items</string>
+    <string name="checklist_is_empty">The checklist is empty</string>
 </resources>
